# ChangeLog for dev-db/myodbc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/myodbc/ChangeLog,v 1.32 2013/03/02 19:50:00 hwoarang Exp $

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> myodbc-5.1.6.ebuild:
  Move Qt dependencies to the new category

  31 Jul 2012; Michael Palimaka <kensington@gentoo.org> myodbc-5.1.6.ebuild:
  Add missing slot dependencies on Qt.

  10 Jul 2010; Robin H. Johnson <robbat2@gentoo.org> -myodbc-3.51.06.ebuild,
  -myodbc-3.51.11.ebuild, -myodbc-3.51.12.ebuild,
  -myodbc-3.51.26_p1127.ebuild, -myodbc-3.51.26_p1127-r1.ebuild,
  -myodbc-3.51.27_p695.ebuild, -myodbc-5.1.5_p1144.ebuild:
  Old versions don't work on newer unixODBC, so clean them up. Latest is
  stable anyway.

  26 Jun 2010; <nixnut@gentoo.org> myodbc-5.1.6.ebuild:
  ppc stable #322277

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> myodbc-5.1.6.ebuild:
  stable amd64, bug 322277

  14 Jun 2010; Christian Faulhammer <fauli@gentoo.org> myodbc-5.1.6.ebuild:
  stable x86, bug 322277

  11 Apr 2010; <nixnut@gentoo.org> myodbc-3.51.26_p1127-r1.ebuild,
  myodbc-5.1.5_p1144.ebuild:
  ppc stable #302944

  07 Feb 2010; Markos Chandras <hwoarang@gentoo.org>
  myodbc-3.51.26_p1127-r1.ebuild, myodbc-5.1.5_p1144.ebuild:
  Stable on amd64 wrt bug #302944

  03 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  myodbc-3.51.26_p1127-r1.ebuild:
  stable x86, bug 302944

  03 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  myodbc-5.1.5_p1144.ebuild:
  stable x86, bug 302944

*myodbc-5.1.6 (31 Jan 2010)

  31 Jan 2010; Robin H. Johnson <robbat2@gentoo.org> +myodbc-5.1.6.ebuild,
  +files/myodbc-5.1.6-qt4-includedir.patch:
  Version bump for 5.1 slot, now includes support for Qt Gui.

*myodbc-3.51.27_p695 (31 Jan 2010)

  31 Jan 2010; Robin H. Johnson <robbat2@gentoo.org>
  +myodbc-3.51.27_p695.ebuild:
  Add 3.51.27 as the final release in the 3.51 series.
