@@ -5,25 +5,23 @@ AUX myodbc-5.1.6-qt4-includedir.patch 580 SHA256 ba1ccd551f87b6d19ddfdb6cfb6f88f
 AUX odbc.ini.m4 517 SHA256 0f14bd8815aac8c75ff3b2b6e86b2883fbe4e2e6e3de153e772091c7a5c124e5 SHA512 60883bced4be275f9496910ecbf11d92e9d550e28c12eca8549546f3b5f5fd12322fabb81611bb4d951bab6d203ddd82aafe8ec8bdf0b6aa61a94eac6770fb3b WHIRLPOOL 2c12b3565efe6f92f8f43f9de84e667b066f6b82e17590b1c918540becc9554b1224c14f40dfa7c263818089208b7851b2ca6a6f881d77196564b57db49634fe
 AUX odbcinst.ini.m4 233 SHA256 893011ec62a2631cf41521717cbebfddf48ae3a633c8ca1e7774f11930fe2537 SHA512 d6a27b1915133e23ab4f16930446e6c623e3636490c1a772a531805d6abbaf8470fa59924f68f01faabf496be7b5f17294fe51a9f940dfa45f03a9abc120f953 WHIRLPOOL e8a10ae834eb97e63ed3dc637f534e556c9e13d11dc71ac0f9e3a0f16054d9e8a23be7bf6f68319817a9bdde7ae735b55be86728f80b7ec4d5ffe00d403c6536
 DIST mysql-connector-odbc-5.1.6.tar.gz 1041247 SHA256 1d53c3a20cf68b089535278d3e69c0e49f367a457640c5f8af25c1cbf4ffb02e SHA512 74fe41c09a6261e31475c17a6b96d3161737c792fec6b2774f51fa58adae592143e44d6a2bf5dc2ec445b5e19653aa6abc9e6d0d37cc478bb26137f2658766f9 WHIRLPOOL 573f942682581514adb94183c633eb38a0ab1c990ead1f7da1e90aedcff18da392480bfaa1216d3e9b0c8b261f963bd81c0ed5f7192c74a8294028783e6f85e9
-EBUILD myodbc-5.1.6.ebuild 3383 SHA256 9a6b06660177ec1ef65109ca66e962ddc9418bb4dd10ba1a48db6038ed467294 SHA512 8556e3db597627122ff619b2d78a07b68f84b98ef4d68342d7781af2fb84610d9be0747457cb28208a5beb13d2052309d48471d49e0af581a5cda1002db9371d WHIRLPOOL b471f5fe2ecb36a78bd31db1066f044d595a000d9d6c5302075746812a63dfcfeaf23ffcb1cadbeffcc850e688a41dd364d4b6c5ac15481b9789e3986800cc65
-MISC ChangeLog 4613 SHA256 ee4301fef3ae21ccaac631f2cf5da9af2caa192541db7f930c18371c12b5938f SHA512 e7c124986247e5d67175e211f7d09bbd1e42b116c72082fac81eea9dae73a2077ac8ac5419aefc9197acd06c88cf15e08d0aefc2fe7c3d5b2195757b7d1a97d5 WHIRLPOOL d1aa4217b23be0e9ab6d39656d7dabbf6757fe52169599bbc7bc0e772fb2b49a3ad4233ccccc5683dd40f341eb378cb400daaf0ff5d89ee5f7f97795d6a7bf65
+EBUILD myodbc-5.1.6.ebuild 3855 SHA256 65e5971ba3a7f04fb0dbf66581a76bbb761caed0cea8d124504828d29a480e82 SHA512 873c6ee1d8fc86f3725fb48e9a80d48f147a82cb0ed3c0804ba72494739a9cb738a44e24a501a8f63fe9605b7319efc774f6acff4f95d9c7c17452518d4c077a WHIRLPOOL ed78fd37725bad4a17fe71c99054650edc2bd978121edaa00b6e2e45681185912e516f4cf3e0d48f31e49559b5ba8dfbd6f7524e4a228bdf2d7c286305e22ed5
+MISC ChangeLog 4871 SHA256 aba04a0269e1307e6d394f4295bb122334db2589f7b88ec06b88b265e2fcbb9f SHA512 b3e22624e9d4bcfab1499574010da2a840f16a72b1712b3184aee25577d7c684bc7cdeb4e16a6d029e96f15db8d657792a1335c1f727bce2213a883fe8fdb246 WHIRLPOOL bfd19840b3b7e6d180ffaa23701428295aabe096e6af73955cbadf5d740dec8cacae22c3f03ae3c78e18eab1ae39dcbce8e167c7a52ad2bf4da6cb78147b2b7e
 MISC metadata.xml 158 SHA256 a212959a64142f5508788a3d336b55cdb97645b6e54d8a887e7308c67791d569 SHA512 538b01075e7bf3f429546654620fa773f3926594d7747d778ce6250263a7ba32fd7e63e14232fd89d503780b783fb7ab401ff2a0040a8d36c99c5c232609ca56 WHIRLPOOL 1739fa77f8bf21977b25d7c05d8da902f0a30335da5fcaca2b35200e504199c645d4115b8d2b4790ccdb692d7010c7a2cc09b27994679af8be6164f1c007e964
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRMlfmXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88JggP/1xkDXHFS9wUUG6YtQByrY1c
-FK1/Xysja1wOJKfPQdXEFjV6wmLgxIErgFyDVz2wrehZTJlmOmsC0LbE9qbI/ZiI
-Om73Bobj9vXcFGiV5hJijxGf88PkneGlu3ijCGT3Qu0mYLdk2tquyOqkfVAJejIh
-SH/VownSYxiktT2aGFeqAqxCAjW9matj/4VaFIrC+m7J7LxVqVPFCZ3oWE6PbJj8
-D5RaH8mSdrZ/nLyqKVIKrTer8QvqmDYcIY2SoSjoqIONs6S7ih+eBjRPX49kG2WT
-rFvSJoiBEC1stEUDxd5D3htXZcFoxCW+dXDdo3NxklbIRhD/AlBYyaqNbgX6Jgc9
-9MfqjEA4TOJLmNtjjEfdMJOrPxWZZgm+zA+cJ/8JemwdL+daezgvnqKAlDtUaeWz
-r98Gk218hX5b6OlL+cmowiglhT5f0EgGRm43Ere/tUSfA026y4gc9m1E3bMHHC0b
-CZvUTlvlAnay3bU6o20mmetpjc7phWBmPWfpHI/cOhh1eTTekgALfg/X0EzBUKAg
-iCP9BG3RAso07Z33OVTZ3lHRAMQ3HN2hnW2jHQko06AsnPzRlu6eabCavEUo6/qJ
-/Ij5nYsYfpMsxeeWsm4+xyfgTtGF6Zl+cF+RMUoiSkafhgl1efNCg3qUtiVAWDqs
-kCOkKRmcEa+p455zU1ic
-=dcdx
+iQIcBAEBCAAGBQJRSVxJAAoJEHQ6UuhrqBBQ7EYP/iaFxAoZu3B/mi/URauWp3AY
+/E3cI6fqY4EsrJpeKGbV132b0LVzRCO/eG96NVNxZiRJdzJMN69dpFaowRjioCOd
+2c1jGEiBCyPOq0DEfeyCs1NQJdNQQVouyZRwXdh3Wzj4nboGfc3VTGRsn58Ibkqm
++nuovhkBUoadc/uqxovlPv5vikNxthxFaIqjmP+/08EkFqHI/5Jgp5RX2TQZzPIQ
+P34dbhrJE06Gq3XtJks7/RUh67zzRUMVpBbwo3xGrto9K8YaBf22rmkIHBx/1R7S
+2y2E99TcXTgB44wT6F+0uzWVgf9eRrrl9b14EUtaoND9cBDlMMHkh7aSRfxIBWqy
+blRCGof4clycMh08sHHUMbmgCDwpWBAmrnvQG5QzG+Wh+gt2HVeCIzjONZz/x1dw
+GrsxN0W7YvdT6smqFUz/fDvwLb3qf1aiuUtVpMVEZsdhUIpTeqJMn2ip5YLN9rV+
+LpK9bxnmt+OLFnizvHxtw1vFMNXic36QdBCggiP2jlsm4Nv2rJrn9moP3+kNXOUc
+ICZTQE8M2sIzKUoriGOkJca7c3aC/md24sw/2d2uZCnvKFTDv5Z2xHcQD5+282PY
+aSSvytv2NjEa1hzicgBaFa0tcJJmtvdTTIuttPKZ75UBOs+L5sIXboIly8fiht2G
+7vZXRXH6MTZytQMhQkth
+=EQ63
 -----END PGP SIGNATURE-----
