@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-db/myodbc/ChangeLog,v 1.32 2013/03/02 19:50:00 hwoarang Exp $
 
+  20 Mar 2013; Nathan Phillip Brink <binki@gentoo.org> myodbc-5.1.6.ebuild:
+  dev-db/myodbc: Add -L/usr/$(get_libdir) to LDFLAGS to prevent libtool from
+  finding the wrong libltdl.la and trying to link against the wrong ABI libltdl
+  for multilib-portage.
+
   02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> myodbc-5.1.6.ebuild:
   Move Qt dependencies to the new category
 
